<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/member1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shabrina" />

    <TextView
        android:id="@+id/member2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angel" />

    <TextView
        android:id="@+id/member3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alice" />

    <TextView
        android:id="@+id/member4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bryan" />
</LinearLayout>