<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/profile_title"
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/hello_blank_fragment" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="Foto Profil"
            android:background="@drawable/circle"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_profile_button"
                style="@style/clickable_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="Edit"
                android:drawableStart="@drawable/edit"
                android:drawablePadding="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/edit_button"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:background="@drawable/rectangular_button"/>

        <Button
            android:id="@+id/logout_button"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_button"
            android:text="@string/logout_button" />

        <TextView
            android:id="@+id/credit_button"
            style="@style/underlined_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/credit_text" />
    </LinearLayout>

</LinearLayout>