<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/register_title"
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_wraper"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/stroke_primary"
        app:hintTextColor="@color/stroke_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_field"
            style="@style/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_wraper"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/stroke_primary"
        app:hintTextColor="@color/stroke_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input_field"
            style="@style/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirm_button"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_button"
                style="@style/underlined_text"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/back" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>